--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@arcjet/node": "^1.0.0-beta.5",
     "@google-cloud/storage": "^7.15.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
